syntax = "proto3";
package app;
service messageServiceGrpc
{
    rpc sendMessage (Data) returns (Message) {};
}

message User  {
    double id = 1;
    string email = 2;
    string firstName = 3;
    string lastName = 4;
    string avatar = 5;
    string lastSeen = 6;
}


message Message
{
    double id = 1;
    string text = 2;
    User user = 3;
    double chatId = 4;
    string createdAt = 5;
}

message Chat {
    double id = 1;
    User user = 2;
    Message message = 3;
}

message Data {
    Message message = 1;
    repeated Chat senderChats = 2;
    repeated Chat receiverChats = 3;
    double senderId = 4;
    double receiverId = 5;
}

